Fix cookie disclaimer z-index #194

--- a/src/app/lp/cookie/cookie-agreement.component.scss
+++ b/src/app/lp/cookie/cookie-agreement.component.scss
@@ -12,6 +12,7 @@ $jnt-ng-deep: true;
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1;
   background-color: rgba($jnt-white-color, 0.6);
   backdrop-filter: blur(30px);
   padding: $jnt-gutter-big 0;
